fixed on mobile width

--- a/src/components/CardModal/CardModal.scss
+++ b/src/components/CardModal/CardModal.scss
@@ -65,10 +65,6 @@
 					font-style: bold;
 				}
 			}
-
-			.card__weight-value {
-			}
-
 			div {
 				display: flex;
 				justify-content: space-between;
